--- a/src/main/webapp/app/entities/core/role/role-detail.component.html
+++ b/src/main/webapp/app/entities/core/role/role-detail.component.html
@@ -1,47 +1,65 @@
-<div class="row justify-content-center">
-    <div class="col-8">
-        <div *ngIf="role">
-            <h2><span jhiTranslate="gatewayApp.coreRole.detail.title">Role</span> {{role.id}}</h2>
-            <hr>
-            <jhi-alert-error></jhi-alert-error>
-            <dl class="row-md jh-entity-details">
-                <dt><span jhiTranslate="gatewayApp.coreRole.name">Name</span></dt>
-                <dd>
-                    <span>{{role.name}}</span>
-                </dd>
-                <dt><span jhiTranslate="gatewayApp.coreRole.clientId">Client Id</span></dt>
-                <dd>
-                    <span>{{role.clientId}}</span>
-                </dd>
-                <dt><span jhiTranslate="gatewayApp.coreRole.isDefault">Is Default</span></dt>
-                <dd>
-                    <span>{{role.isDefault}}</span>
-                </dd>
-                <dt><span jhiTranslate="gatewayApp.coreRole.slug">Slug</span></dt>
-                <dd>
-                    <span>{{role.slug}}</span>
-                </dd>
-                <dt><span jhiTranslate="gatewayApp.coreRole.createdDate">Created Date</span></dt>
-                <dd>
-                    <span>{{role.createdDate}}</span>
-                </dd>
-                <dt><span jhiTranslate="gatewayApp.coreRole.lastUpdatedDate">Last Updated Date</span></dt>
-                <dd>
-                    <span>{{role.lastUpdatedDate}}</span>
-                </dd>
-            </dl>
+<div class="detail-view-page">
+    <div class="row justify-content-center">
+        <div class="col-12">
+            <div *ngIf="role">
+                <h2><span jhiTranslate="gatewayApp.coreRole.detail.title">Role</span></h2>
+                <jhi-alert-error></jhi-alert-error>
+                <div class="table-wrap">
+                    <table class="row-md jh-entity-details">
+                        <tr>
+                            <td><span>Role Id</span></td>
+                            <td><span>{{role.id}}</span></td>
+                        </tr>
+                        <tr>
+                            <td><span jhiTranslate="gatewayApp.coreRole.name">Name</span></td>
+                            <td>
+                                <span>{{role.name}}</span>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td><span jhiTranslate="gatewayApp.coreRole.clientId">Client Id</span></td>
+                            <td>
+                                <span>{{role.clientId}}</span>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td><span jhiTranslate="gatewayApp.coreRole.isDefault">Is Default</span></td>
+                            <td>
+                                <span>{{role.isDefault}}</span>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td><span jhiTranslate="gatewayApp.coreRole.slug">Slug</span></td>
+                            <td>
+                                <span>{{role.slug}}</span>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td><span jhiTranslate="gatewayApp.coreRole.createdDate">Created Date</span></td>
+                            <td>
+                                <span>{{role.createdDate | date:'medium'}}</span>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td><span jhiTranslate="gatewayApp.coreRole.lastUpdatedDate">Last Updated Date</span></td>
+                            <td>
+                                <span>{{role.lastUpdatedDate | date:'medium'}}</span>
+                            </td>
+                        </tr>
+                    </table>
+                </div>
+                <div class="d-flex justify-content-center">
+                    <button type="submit" mat-raised-button class="mr-2"
+                            (click)="previousState()">
+                        <fa-icon [icon]="'arrow-left'"></fa-icon>&nbsp;<span jhiTranslate="entity.action.back"> Back</span>
+                    </button>
 
-            <button type="submit"
-                    (click)="previousState()"
-                    class="btn btn-info">
-                <fa-icon [icon]="'arrow-left'"></fa-icon>&nbsp;<span jhiTranslate="entity.action.back"> Back</span>
-            </button>
-
-            <button type="button"
-                    [routerLink]="['/role', role.id, 'edit']"
-                    class="btn btn-primary">
-                <fa-icon [icon]="'pencil-alt'"></fa-icon>&nbsp;<span jhiTranslate="entity.action.edit"> Edit</span>
-            </button>
+                    <button type="button" mat-raised-button color="primary"
+                            [routerLink]="['/role', role.id, 'edit']">
+                        <fa-icon [icon]="'pencil-alt'"></fa-icon>&nbsp;<span jhiTranslate="entity.action.edit"> Edit</span>
+                    </button>
+                </div>
+            </div>
         </div>
     </div>
 </div>
