--- a/src/main/webapp/app/entities/factcheck/claim/claim-detail.component.html
+++ b/src/main/webapp/app/entities/factcheck/claim/claim-detail.component.html
@@ -1,83 +1,116 @@
-<div class="row justify-content-center">
-    <div class="col-8">
-        <div *ngIf="claim">
-            <h2><span jhiTranslate="gatewayApp.factcheckClaim.detail.title">Claim</span> {{claim.id}}</h2>
-            <hr>
-            <jhi-alert-error></jhi-alert-error>
-            <dl class="row-md jh-entity-details">
-                <dt><span jhiTranslate="gatewayApp.factcheckClaim.claim">Claim</span></dt>
-                <dd>
-                    <span>{{claim.claim}}</span>
-                </dd>
-                <dt><span jhiTranslate="gatewayApp.factcheckClaim.description">Description</span></dt>
-                <dd>
-                    <span [innerHtml]="claim.description"></span>
-                </dd>
-                <dt><span jhiTranslate="gatewayApp.factcheckClaim.claimDate">Claim Date</span></dt>
-                <dd>
-                    <span>{{claim.claimDate}}</span>
-                </dd>
-                <dt><span jhiTranslate="gatewayApp.factcheckClaim.claimSource">Claim Source</span></dt>
-                <dd>
-                    <span>{{claim.claimSource}}</span>
-                </dd>
-                <dt><span jhiTranslate="gatewayApp.factcheckClaim.checkedDate">Checked Date</span></dt>
-                <dd>
-                    <span>{{claim.checkedDate}}</span>
-                </dd>
-                <dt><span jhiTranslate="gatewayApp.factcheckClaim.reviewSources">Review Sources</span></dt>
-                <dd>
-                    <span>{{claim.reviewSources}}</span>
-                </dd>
-                <dt><span jhiTranslate="gatewayApp.factcheckClaim.review">Review</span></dt>
-                <dd>
-                    <span>{{claim.review}}</span>
-                </dd>
-                <dt><span jhiTranslate="gatewayApp.factcheckClaim.reviewTagLine">Review Tag Line</span></dt>
-                <dd>
-                    <span>{{claim.reviewTagLine}}</span>
-                </dd>
-                <dt><span jhiTranslate="gatewayApp.factcheckClaim.clientId">Client Id</span></dt>
-                <dd>
-                    <span>{{claim.clientId}}</span>
-                </dd>
-                <dt><span jhiTranslate="gatewayApp.factcheckClaim.slug">Slug</span></dt>
-                <dd>
-                    <span>{{claim.slug}}</span>
-                </dd>
-                <dt><span jhiTranslate="gatewayApp.factcheckClaim.createdDate">Created Date</span></dt>
-                <dd>
-                    <span>{{claim.createdDate}}</span>
-                </dd>
-                <dt><span jhiTranslate="gatewayApp.factcheckClaim.lastUpdatedDate">Last Updated Date</span></dt>
-                <dd>
-                    <span>{{claim.lastUpdatedDate}}</span>
-                </dd>
-                <dt><span jhiTranslate="gatewayApp.factcheckClaim.rating">Rating</span></dt>
-                <dd>
-                    <div *ngIf="claim.ratingId">
-                        <a [routerLink]="['/rating', claim.ratingId, 'view']">{{claim.ratingName}}</a>
-                    </div>
-                </dd>
-                <dt><span jhiTranslate="gatewayApp.factcheckClaim.claimant">Claimant</span></dt>
-                <dd>
-                    <div *ngIf="claim.claimantId">
-                        <a [routerLink]="['/claimant', claim.claimantId, 'view']">{{claim.claimantName}}</a>
-                    </div>
-                </dd>
-            </dl>
-
-            <button type="submit"
-                    (click)="previousState()"
-                    class="btn btn-info">
-                <fa-icon [icon]="'arrow-left'"></fa-icon>&nbsp;<span jhiTranslate="entity.action.back"> Back</span>
-            </button>
-
-            <button type="button"
-                    [routerLink]="['/claim', claim.id, 'edit']"
-                    class="btn btn-primary">
-                <fa-icon [icon]="'pencil-alt'"></fa-icon>&nbsp;<span jhiTranslate="entity.action.edit"> Edit</span>
-            </button>
+<div class="detail-view-page">
+    <div class="row justify-content-center">
+        <div class="col-12">
+            <div *ngIf="claim">
+                <h2><span jhiTranslate="gatewayApp.factcheckClaim.detail.title">Claim</span></h2>
+                <jhi-alert-error></jhi-alert-error>
+                <div class="table-wrap">
+                    <table class="row-md jh-entity-details">
+                        <tr>
+                            <td><span>Claim Id</span></td>
+                            <td><span>{{claim.id}}</span></td>
+                        </tr>
+                        <tr>
+                            <td><span jhiTranslate="gatewayApp.factcheckClaim.claim">Claim</span></td>
+                            <td>
+                                <span>{{claim.claim}}</span>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td><span jhiTranslate="gatewayApp.factcheckClaim.description">Description</span></td>
+                            <td>
+                                <span [innerHtml]="claim.description"></span>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td><span jhiTranslate="gatewayApp.factcheckClaim.claimDate">Claim Date</span></td>
+                            <td>
+                                <span>{{claim.claimDate}}</span>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td><span jhiTranslate="gatewayApp.factcheckClaim.claimSource">Claim Source</span></td>
+                            <td>
+                                <span>{{claim.claimSource}}</span>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td><span jhiTranslate="gatewayApp.factcheckClaim.checkedDate">Checked Date</span></td>
+                            <td>
+                                <span>{{claim.checkedDate}}</span>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td><span jhiTranslate="gatewayApp.factcheckClaim.reviewSources">Review Sources</span></td>
+                            <td>
+                                <span>{{claim.reviewSources}}</span>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td><span jhiTranslate="gatewayApp.factcheckClaim.review">Review</span></td>
+                            <td>
+                                <span>{{claim.review}}</span>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td><span jhiTranslate="gatewayApp.factcheckClaim.reviewTagLine">Review Tag Line</span></td>
+                            <td>
+                                <span>{{claim.reviewTagLine}}</span>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td><span jhiTranslate="gatewayApp.factcheckClaim.clientId">Client Id</span></td>
+                            <td>
+                                <span>{{claim.clientId}}</span>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td><span jhiTranslate="gatewayApp.factcheckClaim.slug">Slug</span></td>
+                            <td>
+                                <span>{{claim.slug}}</span>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td><span jhiTranslate="gatewayApp.factcheckClaim.createdDate">Created Date</span></td>
+                            <td>
+                                <span>{{claim.createdDate | date:'medium'}}</span>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td><span jhiTranslate="gatewayApp.factcheckClaim.lastUpdatedDate">Last Updated Date</span></td>
+                            <td>
+                                <span>{{claim.lastUpdatedDate | date:'medium'}}</span>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td><span jhiTranslate="gatewayApp.factcheckClaim.rating">Rating</span></td>
+                            <td>
+                                <div *ngIf="claim.ratingId">
+                                    <a [routerLink]="['/rating', claim.ratingId, 'view']">{{claim.ratingName}}</a>
+                                </div>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td><span jhiTranslate="gatewayApp.factcheckClaim.claimant">Claimant</span></td>
+                            <td>
+                                <div *ngIf="claim.claimantId">
+                                    <a [routerLink]="['/claimant', claim.claimantId, 'view']">{{claim.claimantName}}</a>
+                                </div>
+                            </td>
+                        </tr>
+                    </table>
+                </div>
+                <div class="d-flex justify-content-center">
+                    <button type="submit" mat-raised-button class="mr-2"
+                            (click)="previousState()">
+                        <fa-icon [icon]="'arrow-left'"></fa-icon>&nbsp;<span jhiTranslate="entity.action.back"> Back</span>
+                    </button>
+                    <button type="button" mat-raised-button color="primary"
+                            [routerLink]="['/claim', claim.id, 'edit']">
+                        <fa-icon [icon]="'pencil-alt'"></fa-icon>&nbsp;<span jhiTranslate="entity.action.edit"> Edit</span>
+                    </button>
+                </div>
+            </div>
         </div>
     </div>
 </div>
