--- a/src/main/webapp/app/entities/factcheck/claim/new-claim-popup.component.html
+++ b/src/main/webapp/app/entities/factcheck/claim/new-claim-popup.component.html
@@ -93,7 +93,7 @@
                             <div class="col-md-12">
                                 <mat-form-field class="full-width">
                                     <input matInput
-                                           formControlName="eviewTagLine"
+                                           formControlName="reviewTagLine"
                                            placeholder="Review Tag Line">
                                     <mat-error>
                                         reviewTagLine is <strong>required</strong>
